# lib-io

./: CMakeLists.txt  fuckme.txt  test.txt
include/: libio.h
src/: libio.c  main.c
